--- a/10레이아웃/index.html
+++ b/10레이아웃/index.html
@@ -63,20 +63,135 @@
                 <ul>
                     <li>
                         <a href="#">
-                            <span>
+                            <span class="thumbs">
                                 <img src="http://placehold.it/45x45">
                             </span>
-                            <span>
+                            <span class="content">
                                 <strong>컨텐츠...</strong>
                                 <p>2022-02-14</p>
                             </span>
                         </a>
                     </li>
+                    <li>
+                        <a href="#">
+                            <span class="thumbs">
+                                <img src="http://placehold.it/45x45">
+                            </span>
+                            <span class="content">
+                                <strong>컨텐츠...</strong>
+                                <p>2022-02-14</p>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="thumbs">
+                                <img src="http://placehold.it/45x45">
+                            </span>
+                            <span class="content">
+                                <strong>컨텐츠...</strong>
+                                <p>2022-02-14</p>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="thumbs">
+                                <img src="http://placehold.it/45x45">
+                            </span>
+                            <span class="content">
+                                <strong>컨텐츠...</strong>
+                                <p>2022-02-14</p>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="thumbs">
+                                <img src="http://placehold.it/45x45">
+                            </span>
+                            <span class="content">
+                                <strong>컨텐츠...</strong>
+                                <p>2022-02-14</p>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="thumbs">
+                                <img src="http://placehold.it/45x45">
+                            </span>
+                            <span class="content">
+                                <strong>컨텐츠...</strong>
+                                <p>2022-02-14</p>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="thumbs">
+                                <img src="http://placehold.it/45x45">
+                            </span>
+                            <span class="content">
+                                <strong>컨텐츠...</strong>
+                                <p>2022-02-14</p>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="thumbs">
+                                <img src="http://placehold.it/45x45">
+                            </span>
+                            <span class="content">
+                                <strong>컨텐츠...</strong>
+                                <p>2022-02-14</p>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="thumbs">
+                                <img src="http://placehold.it/45x45">
+                            </span>
+                            <span class="content">
+                                <strong>컨텐츠...</strong>
+                                <p>2022-02-14</p>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="thumbs">
+                                <img src="http://placehold.it/45x45">
+                            </span>
+                            <span class="content">
+                                <strong>컨텐츠...</strong>
+                                <p>2022-02-14</p>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="thumbs">
+                                <img src="http://placehold.it/45x45">
+                            </span>
+                            <span class="content">
+                                <strong>컨텐츠.........................</strong>
+                                <p>2022-02-14</p>
+                            </span>
+                        </a>
+                    </li>                
                 </ul>
             </div>
         </aside>
     </section>
 
+
+    <footer>
+        <h3>HTML5 + CSS3 Basic</h3>
+        <p>copyright 2022</p>
+    </footer>
 
 </body>
 </html>
